updated swagger doc
