# docs/swagger.json
@@ -4,59 +4,9 @@
         "contact": {}
     },
     "paths": {
-        "/prefixes": {
-            "put": {
-                "description": "Register a prefix",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "prefixes"
-                ],
-                "summary": "Update a prefix",
-                "parameters": [
-                    {
-                        "description": "Request body",
-                        "name": "body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/github_com_NorskHelsenett_oss-ipam-api_pkg_models_apicontracts.K8sRequestBody"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/github_com_NorskHelsenett_oss-ipam-api_pkg_models_apicontracts.K8sRequestResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/github_com_NorskHelsenett_oss-ipam-api_pkg_models_apicontracts.HTTPError"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/github_com_NorskHelsenett_oss-ipam-api_pkg_models_apicontracts.HTTPError"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/github_com_NorskHelsenett_oss-ipam-api_pkg_models_apicontracts.HTTPError"
-                        }
-                    }
-                }
-            },
+        "/": {
             "post": {
-                "description": "Register a prefix",
+                "description": "Register an address in Vitistack IPAM API",
                 "consumes": [
                     "application/json"
                 ],
@@ -64,9 +14,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "prefixes"
+                    "addresses"
                 ],
-                "summary": "Register a prefix",
+                "summary": "Register an address",
                 "parameters": [
                     {
                         "description": "Request body",
@@ -74,7 +24,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github_com_NorskHelsenett_oss-ipam-api_pkg_models_apicontracts.K8sRequestBody"
+                            "$ref": "#/definitions/apicontracts.IpamApiRequest"
                         }
                     }
                 ],
@@ -82,31 +32,31 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/github_com_NorskHelsenett_oss-ipam-api_pkg_models_apicontracts.K8sRequestResponse"
+                            "$ref": "#/definitions/apicontracts.IpamApiResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/github_com_NorskHelsenett_oss-ipam-api_pkg_models_apicontracts.HTTPError"
+                            "$ref": "#/definitions/apicontracts.HTTPError"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/github_com_NorskHelsenett_oss-ipam-api_pkg_models_apicontracts.HTTPError"
+                            "$ref": "#/definitions/apicontracts.HTTPError"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/github_com_NorskHelsenett_oss-ipam-api_pkg_models_apicontracts.HTTPError"
+                            "$ref": "#/definitions/apicontracts.HTTPError"
                         }
                     }
                 }
             },
             "delete": {
-                "description": "Deregister a prefix",
+                "description": "Set expiration for a service",
                 "consumes": [
                     "application/json"
                 ],
@@ -114,23 +64,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "prefixes"
+                    "addresses"
                 ],
-                "summary": "Deregister a prefix",
-                "responses": {}
-            },
-            "patch": {
-                "description": "Register a prefix",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "prefixes"
-                ],
-                "summary": "Update a prefix",
+                "summary": "Set expiration for a service",
                 "parameters": [
                     {
                         "description": "Request body",
@@ -138,7 +74,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github_com_NorskHelsenett_oss-ipam-api_pkg_models_apicontracts.K8sRequestBody"
+                            "$ref": "#/definitions/apicontracts.IpamApiRequest"
                         }
                     }
                 ],
@@ -146,25 +82,25 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/github_com_NorskHelsenett_oss-ipam-api_pkg_models_apicontracts.K8sRequestResponse"
+                            "$ref": "#/definitions/apicontracts.IpamApiResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/github_com_NorskHelsenett_oss-ipam-api_pkg_models_apicontracts.HTTPError"
+                            "$ref": "#/definitions/apicontracts.HTTPError"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/github_com_NorskHelsenett_oss-ipam-api_pkg_models_apicontracts.HTTPError"
+                            "$ref": "#/definitions/apicontracts.HTTPError"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/github_com_NorskHelsenett_oss-ipam-api_pkg_models_apicontracts.HTTPError"
+                            "$ref": "#/definitions/apicontracts.HTTPError"
                         }
                     }
                 }
@@ -172,7 +108,7 @@
         }
     },
     "definitions": {
-        "github_com_NorskHelsenett_oss-ipam-api_pkg_models_apicontracts.HTTPError": {
+        "apicontracts.HTTPError": {
             "type": "object",
             "properties": {
                 "code": {
@@ -183,16 +119,27 @@
                 }
             }
         },
-        "github_com_NorskHelsenett_oss-ipam-api_pkg_models_apicontracts.K8sRequestBody": {
+        "apicontracts.IpamApiRequest": {
             "type": "object",
             "required": [
+                "ip_family",
                 "secret",
                 "zone"
             ],
             "properties": {
-                "prefix": {
+                "address": {
+                    "type": "string"
+                },
+                "ip_family": {
                     "type": "string",
-                    "example": "10.0.0.0/32"
+                    "enum": [
+                        "ipv4",
+                        "ipv6"
+                    ],
+                    "example": "ipv4"
+                },
+                "new_secret": {
+                    "type": "string"
                 },
                 "secret": {
                     "type": "string",
@@ -201,23 +148,21 @@
                     "example": "a_secret_value"
                 },
                 "service": {
-                    "$ref": "#/definitions/github_com_NorskHelsenett_oss-ipam-api_pkg_models_apicontracts.Service"
+                    "$ref": "#/definitions/apicontracts.Service"
                 },
                 "zone": {
                     "type": "string",
-                    "maxLength": 64,
-                    "minLength": 8,
-                    "example": "internet"
+                    "example": "inet"
                 }
             }
         },
-        "github_com_NorskHelsenett_oss-ipam-api_pkg_models_apicontracts.K8sRequestResponse": {
+        "apicontracts.IpamApiResponse": {
             "type": "object",
             "properties": {
-                "message": {
+                "address": {
                     "type": "string"
                 },
-                "prefix": {
+                "message": {
                     "type": "string"
                 },
                 "secret": {
@@ -228,27 +173,35 @@
                 }
             }
         },
-        "github_com_NorskHelsenett_oss-ipam-api_pkg_models_apicontracts.Service": {
+        "apicontracts.Service": {
             "type": "object",
             "required": [
-                "location",
-                "name",
-                "uuid"
+                "cluster_id",
+                "namespace_id",
+                "service_name"
             ],
             "properties": {
-                "location": {
-                    "type": "string",
-                    "example": "location1"
-                },
-                "name": {
-                    "type": "string",
-                    "maxLength": 64,
-                    "minLength": 8,
-                    "example": "service1"
-                },
-                "uuid": {
+                "cluster_id": {
                     "type": "string",
                     "example": "123e4567-e89b-12d3-a456-426614174000"
+                },
+                "deny_external_cleanup": {
+                    "type": "boolean"
+                },
+                "expires_at": {
+                    "type": "string",
+                    "example": "2025-06-03 14:39:31.546230273"
+                },
+                "namespace_id": {
+                    "type": "string",
+                    "example": "123e4567-e89b-12d3-a456-426614174000"
+                },
+                "retention_period_days": {
+                    "type": "integer"
+                },
+                "service_name": {
+                    "type": "string",
+                    "example": "service1"
                 }
             }
         }
